fixed Clients component spacing, fixed GlobalConnections background image z-index

--- a/src/components/Clients/Clients.module.css
+++ b/src/components/Clients/Clients.module.css
@@ -24,16 +24,14 @@
 }
 
 .grid {
-  max-width: 39.6rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-row-gap: 2.4rem;
+  grid-row-gap: 3.2rem;
 }
 
 .box {
   width: 100%;
-  max-width: 19.8rem;
   display: inline-block;
   padding: 0 1.2rem;
 }
@@ -76,7 +74,6 @@
   }
 
   .grid {
-    max-width: 59.4rem;
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -87,7 +84,6 @@
   }
 
   .grid {
-    max-width: 79.2rem;
     grid-template-columns: repeat(4, 1fr);
   }
 
