--- a/src/components/GlobalConnections/GlobalConnections.module.css
+++ b/src/components/GlobalConnections/GlobalConnections.module.css
@@ -3,6 +3,7 @@
 }
 
 .imgWrapper {
+  z-index: -1;
   display: none;
   width: 78rem;
   height: 65rem;
