--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,14 +31,6 @@
 }
 
 .header > div:nth-of-type(2) {
-  display: none;
-  box-shadow: none;
-  transition: display 250ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
-}
-
-.header > .scrolling {
-  display: block !important;
   position: absolute;
   width: calc(100% - 4.8rem);
   left: 0;
@@ -48,6 +40,14 @@
   height: 2.4rem;
   border-radius: 50%;
   margin: auto;
+  display: none;
+  box-shadow: none;
+  transition: display 250ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.6, 1) 2000ms;
+}
+
+.header > .scrolling {
+  display: block !important;
   box-shadow: rgb(145, 158, 171) -23px 16px 56px -8px !important;
 }
 
